--- a/google_clone.html
+++ b/google_clone.html
@@ -9,38 +9,36 @@
 	<body>
 		<div class="header">
 			<ul>
-				<li><a href="#">Gmail</a></li>
-				<li><a href="#">Images</a></li>
-				<li><img src="#" alt="Apps"></li>
-				<li><a href="#">Sign in</a></li>
+				<li id="gmail_link"><a href="#">Gmail</a></li>
+				<li id="images_link"><a href="#">Images</a></li>
+				<li><a id="apps" href="#"></a></li>
+				<li id="sign_in"><a id="sign_in_link" href="#">Sign in</a></li>
 			</ul>
 		</div>
-		<div class="lower">
-			<div class="logo_cnt">
-				<img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo">
+		<div class="logo_cnt">
+			<img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo">
+		</div>
+		<div class="search_form">
+			<form action="#" method="get">
+				<input class="search_input" type="text"> <br>
+				<input class="button" type="submit" value="Google Search">
+				<input class="button" type="submit" value="I'm Feeling Lucky">
+			</form>
+		</div>
+		<div class="footer">
+			<div id="left_foot">
+				<ul>
+					<li><a href="#">Advertising</a></li>
+					<li><a href="#">Business</a></li>
+					<li><a href="#">About</a></li>
+				</ul>
 			</div>
-			<div class="search_form">
-				<form action="#" method="get">
-					<input type="text"> <br><br>
-					<input type="submit" value="Google Search">
-					<input type="submit" value="I'm Feeling Lucky">
-				</form>
-			</div>
-			<div class="footer">
-				<div id="left_foot">
-					<ul>
-						<li><a href="#">Advertising</a></li>
-						<li><a href="#">Business</a></li>
-						<li><a href="#">About</a></li>
-					</ul>
-				</div>
-				<div id="right_foot">
-					<ul>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Settings</a></li>
-					</ul>
-				</div>
+			<div id="right_foot">
+				<ul>
+					<li><a href="#">Privacy</a></li>
+					<li><a href="#">Terms</a></li>
+					<li><a href="#">Settings</a></li>
+				</ul>
 			</div>
 		</div>
 	</body>
